tests/fixtures/invalid/set_neg.py
# Cannot use unary - on Set[int]
x: set = -{1, 2, 3}
